--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -1068,7 +1068,7 @@ and also Figure~\ref{fig:queue-weapon}.
 \caption{Summary of the logical queue's contents, for full CORELS (top left)
 and five variants that each remove a specific implementation optimization or bound,
 for the NYCLU stop-and-frisk dataset (${\Reg = 0.01}$, ${M = 46}$), as in Table~\ref{tab:ablation-weapon}.
-The execution without the symmetry-aware map (bottom left) is incomplete.
+The execution without the symmetry-aware map (bottom center) is incomplete.
 %
 See Figure~\ref{fig:queue} for a detailed caption.
 }
@@ -1222,7 +1222,7 @@ would evaluate ${2.5 \times 10^{10}}$ prefixes.
 As shown in Figure~\ref{fig:recidivism-all-folds}, the optimal rule list has prefix length~3,
 thus the brute force algorithm would identify the optimal rule list.
 %
-However, for this approach to certify optimality, it would have consider far longer prefixes.
+However, for this approach to certify optimality, it would have to consider far longer prefixes.
 %
 Without our equivalent points bound, but with all of our other optimizations,
 we evaluate prefixes up to at least length~10
