Cynthia's last edits

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -71,7 +71,7 @@ When our algorithm terminates, it outputs an optimal solution of the training op
 %
 On practical note, our approach can also provide useful results even for incomplete executions.
 %
-We have empirically observed that our algorithm often identifies the optimal rule list
+As shown earlier, we have empirically observed that our algorithm often identifies the optimal rule list
 very quickly, compared to the total time required to prove optimality, \eg in seconds,
 versus minutes, respectively.
 %
