--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -1231,7 +1231,7 @@ would have to evaluate prefixes of length~10 or longer.
 %
 Na\"ively evaluating all prefixes up to length~10 would require looking at ${5.0 \times 10^{20}}$ different prefixes.
 
-However, CORELS examines only 28 million prefixes in total---a reduction of 893 compared to examining
+However, CORELS examines only 28 million prefixes in total---a reduction factor of~893 compared to examining
 all prefixes up to length~5 and a reduction of ${1.8 \times 10^{13}}$ for the case of length~10.
 %
 On a laptop, we require about 1.3~$\mu$s to evaluate a single prefix (given by dividing the number of lower bound evaluations by the total time
@@ -1249,7 +1249,7 @@ Moore's law holds that computing power doubled every 18 months from 1984--2006.
 This is a period of 264 months, which means computing power has gone up by at least a factor of 32,000 since 1984.
 %
 Thus, even with our algorithmic and data structural improvements,
-CORELS would have required over 1.2 million seconds in 1984---an unreasonable amount of time.
+CORELS would have required about 13.5 days in 1984---an unreasonable amount of time.
 %
 Our advances are meaningful only because we can run them on a modern system.
 %
