--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -69,7 +69,7 @@ these calculations also help us qualify the impact of different algorithmic boun
 
 When our algorithm terminates, it outputs an optimal solution of the training optimization problem, with a certificate of optimality.
 %
-On practical note, our approach can also provide useful results even for incomplete executions.
+On a practical note, our approach can also provide useful results even for incomplete executions.
 %
 As shown earlier, we have empirically observed that our algorithm often identifies the optimal rule list
 very quickly, compared to the total time required to prove optimality, \eg in seconds,
