Margo edits Intro

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -38,7 +38,7 @@ for the ProPublica dataset, found by CORELS.
 
 Optimality is important, because there are societal implications for a lack of optimality.
 %
-Consider the recent ProPublica article on the Correctional Offender Management Profiling for Alternative Sanctions
+Consider the ProPublica article on the Correctional Offender Management Profiling for Alternative Sanctions
 (COMPAS) recidivism prediction tool~\citep{LarsonMaKiAn16}.
 %
 It highlights a case where a black-box, proprietary predictive model is being used for recidivism prediction.
@@ -128,7 +128,7 @@ Thus, CORELS terminates with the optimal rule list %, the close-to-optimal rule 
 and a certificate of optimality.
 \end{arxiv}
 
-The efficacy of CORELS depends on how much of the search space our bounds
+The efficiency of CORELS depends on how much of the search space our bounds
 allow us to prune; we seek a tight lower bound on~$R$.
 %
 The bound we maintain throughout execution is a maximum of several bounds
@@ -220,7 +220,7 @@ and further implementation and data processing details~\citep{AngelinoLaAlSeRu17
 Our code is at
 \end{kdd}
 \begin{arxiv}
-short version version of this report~\citep{AngelinoLaAlSeRu17-kdd}. \\
+short version of this report~\citep{AngelinoLaAlSeRu17-kdd}. \\
 
 Our implementation of CORELS is at
 \end{arxiv}
