Margo edits Framework

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -5,13 +5,13 @@
 In this section, we present our framework for learning certifiably optimal rule lists.
 %
 First, we define our setting and useful notation~(\S\ref{sec:setup}),
-followed by the objective function we seek to minimize~(\S\ref{sec:objective}).
+and then the objective function we seek to minimize~(\S\ref{sec:objective}).
 %
 Next, we describe the principal structure of our optimization algorithm~(\S\ref{sec:optimization}), which depends on a hierarchically
 structured objective lower bound~(\S\ref{sec:hierarchical}).
 %
 We then derive a series of additional bounds that we incorporate into our
-algorithm because they enable aggressive pruning of our state space.
+algorithm, because they enable aggressive pruning of our state space.
 \end{arxiv}
 
 \subsection{Notation}
@@ -90,14 +90,14 @@ whose antecedent~$p_0$ simply asserts true.
 \State \belse $q_0$
 \end{algorithmic}
 \end{subfigure}
-\caption{The same 3-rule list ${\RL = (r_1, r_2, r_3, r_0)}$,
-as in Figure~\ref{fig:rule-list},
-that predicts two-year recidivism for the ProPublica dataset.
+\caption{The rule list ${\RL = (r_1, r_2, r_3, r_0)}$.
 Each rule is of the form ${r_k = p_k \rightarrow q_k}$,
 for all ${k = 0, \dots, 3}$.
-We also equivalently write ${\RL = (\Prefix, \Labels, \Default, K)}$,
+We can also express this rule list as ${\RL = (\Prefix, \Labels, \Default, K)}$,
 where ${\Prefix = (p_1, p_2, p_3)}$, ${\Labels = (1, 1, 1, 1)}$,
 ${\Default = 0}$, and ${K=3}$.
+This is the same 3-rule list as in Figure~\ref{fig:rule-list},
+that predicts two-year recidivism for the ProPublica dataset.
 }
 \label{fig:rule-list-symbols}
 \end{figure}
@@ -127,6 +127,9 @@ the rule list in Figure~\ref{fig:rule-list},
 we would write ${\RL = (\Prefix, \Labels, \Default, K)}$,
 where ${\Prefix = (p_1, p_2, p_3)}$, ${\Labels = (1, 1, 1)}$,
 ${\Default = 0}$, and ${K=3}$.
+%
+Note that ${((), (), q_0, 0)}$ is a well-defined rule list with an empty prefix;
+it is completely defined by a single default rule.
 
 Let ${\Prefix = (p_1, \dots, p_k, \dots, p_K)}$ be an antecedent list,
 then for any ${k \le K}$, we define ${\Prefix^k =}$ ${(p_1, \dots, p_k)}$
