Tweak figure sizing

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -585,7 +585,8 @@ to compute, without even requiring arithmetic.
 % left lower right upper
 %\includegraphics[trim={2mm, 10mm, 2mm, 0mm}, width=\textwidth]{figs/compare-compas-weapon.pdf}
 \includegraphics[trim={2mm, 0mm, 101mm, 0mm}, clip,
-width=0.5\textwidth]{figs/compare-compas-weapon.pdf}
+width=0.55\textwidth]{figs/compare-compas-weapon.pdf}
+\vspace{-5mm}
 \end{center}
 \caption{Two-year recidivism prediction for the ProPublica COMPAS dataset.
 %
