--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,8 +1,8 @@
 We present the design and implementation of a custom discrete optimization
 technique for building rule lists over a categorical feature space.
 %
-Our algorithm provides optimal rule lists according to the regularized empirical risk,
-with a certificate of optimality.
+Our algorithm provides rule lists with optimal training performance,
+according to the regularized empirical risk, with a certificate of optimality.
 %
 By leveraging algorithmic bounds, efficient data structures,
 and computational reuse, we achieve several orders of magnitude speedup in time
