Margo's edit: delete comma

--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -4,7 +4,7 @@
 \begin{arxiv}
 In this section, we present our framework for learning certifiably optimal rule lists.
 %
-First, we define our setting and useful notation~(\S\ref{sec:setup}),
+First, we define our setting and useful notation~(\S\ref{sec:setup})
 and then the objective function we seek to minimize~(\S\ref{sec:objective}).
 %
 Next, we describe the principal structure of our optimization algorithm~(\S\ref{sec:optimization}), which depends on a hierarchically
