--- a/paper/sections/framework.tex
+++ b/paper/sections/framework.tex
@@ -455,7 +455,9 @@ objective lower bound ${b(\Prefix, \x, \y)}$,
 set of antecedents ${\RuleSet = \{s_m\}_{m=1}^M}$,
 training data $(\x, \y) = {\{(x_n, y_n)\}_{n=1}^N}$,
 initial best known rule list~$\InitialRL$ with objective
-${\InitialObj = \Obj(\InitialRL, \x, \y)}$
+${\InitialObj = \Obj(\InitialRL, \x, \y)}$;
+$\InitialRL$ could be obtained as output from another (approximate) algorithm,
+otherwise, $(\InitialRL, \InitialObj) = (\text{null}, 1)$ provide reasonable default values
 \State \textbf{Output:} Provably optimal rule list~$\OptimalRL$ with minimum objective~$\OptimalObj$ \\
 
 \State $(\CurrentRL, \CurrentObj) \gets (\InitialRL, \InitialObj)$ \Comment{Initialize best rule list and objective}
