Margo's edit: stable ordering for BFS/DFS

--- a/paper/sections/implementation-long.tex
+++ b/paper/sections/implementation-long.tex
@@ -100,7 +100,7 @@ queue and priority queue to implement BFS and best-first search, respectively.
 %
 For CORELS, priority queue policies of interest include ordering by the lower bound,
 the objective, or more generally, any function that maps prefixes to real values;
-ordering by prefix length and inverse prefix length implement
+stably ordering by prefix length and inverse prefix length implement
 BFS and depth-first search (DFS), respectively.
 %
 In our released code, we present a unified implementation,
