--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -752,7 +752,7 @@ CORELS with different regularization parameters (NYCLU stop-and-frisk dataset) \
 & Total & Time to & Max evaluated & Optimal \\
 $\lambda$ & time (s) & optimum (s) & prefix length & prefix length \\
 \hline
-.04 & .61 (.03) & .002 (.001) & 6 & 2 \\
+.04 & ~.61 (.03) & .002 (.001) & 6 & 2 \\
 .01 & 70 (6) & .008 (.002) & 11 & 3 \\
 .0025 & 1600 (100) & 56 (74) & 16-17 & 6-10 \\
 \hline
@@ -762,7 +762,7 @@ $\lambda$ & time (s) & optimum (s) & prefix length & prefix length \\
 & Lower bound & Total queue &  Max queue \\
 $\lambda$ &~ evaluations ($\times 10^6$) ~&~ insertions ($\times 10^3$) ~&~ size ($\times 10^3$) \\
 \hline
-.04 & .070 (.004) & 2.2 (.1) & .9 (.1) \\
+.04 & ~.070 (.004) & 2.2 (.1) & ~.9 (.1) \\
 .01 & 7.5 (.6) & 210 (20) & 130 (10) \\
 .0025 & 150 (10) & 4400 (300) & 2500 (170) \\
 \end{tabular}
@@ -895,11 +895,11 @@ Per-component performance improvement (ProPublica dataset) \\
 & Total time & Slow- & Time to & Max evaluated \\
 Algorithm variant & (min) & down & optimum (s) & prefix length \\
 \hline
-CORELS & 0.98 (.6) & --- & 1 (1) & 5 \\
-No priority queue (BFS) & 1.03 (.6) & 1.1$\times$ & 2 (4) & 5 \\
-No support bounds & 1.5 (.9) & 1.5$\times$ & 1 (2) & 5 \\
-No lookahead bound & 12.3 (6.2) & 13.3$\times$ & 1 (1) & 6 \\
-No symmetry-aware map & 9.1 (6.4) & 8.4$\times$ & 2 (3) & 5 \\
+CORELS & ~.98 (.6) & --- & ~~1 (1) & 5 \\
+No priority queue (BFS) & 1.03 (.6) & 1.1$\times$ & ~~2 (4) & 5 \\
+No support bounds & ~1.5 (.9) & 1.5$\times$ & ~~1 (2) & 5 \\
+No lookahead bound & ~12.3 (6.2) & 13.3$\times$ & ~~1 (1) & 6 \\
+No symmetry-aware map & ~~~9.1 (6.4) & 8.4$\times$ & ~~2 (3) & 5 \\
 No equivalent points bound* & $>$130 (2.6) & $>$180$\times$ & $>$1400 (2000) & $\ge$11 \\
 \hline
 \end{tabular}
@@ -913,7 +913,7 @@ No priority queue (BFS) & 27 (16) & .33 (.2) & .20 (.1) \\
 No support bounds & 42 (25) & .40 (.2) & .33 (.2) \\
 No lookahead bound & 320 (160) & 3.6 (1.8) & 3.0 (1.5) \\
 No symmetry-aware map & 250 (180) & 2.5 (1.7) & 2.4 (1.7) \\
-No equivalent points bound* & $>$940 (5) & $>$510 (1.1) & $>$500 (1.2) \\
+No equivalent points bound* & $>$940 (5)~~~~~ & $>$510 (1.1)~~~ & $>$500 (1.2)~~~ \\
 \end{tabular}
 %\vspace{4mm}
 \caption{Per-component performance improvement, for the ProPublica dataset
@@ -1025,12 +1025,12 @@ Per-component performance improvement (NYCLU stop-and-frisk dataset) \\
 & Total & Slow- & Time to & Max evaluated \\
 Algorithm variant & time (min) & down & optimum ($\mu$s) & prefix length \\
 \hline
-CORELS & 1.1 (.1) & --- & 8.9 (.1) & 11 \\
-No priority queue (BFS) & 2.2 (.2) & 2.0$\times$ & 110 (10) & 11 \\
-No support bounds & 1.2 (.1) & 1.1$\times$ & 8.8 (.8) & 11 \\
-No lookahead bound & 1.7 (.2) & 1.6$\times$ & 7.3 (1.8) & 11-12 \\
-No symmetry-aware map & $>$ 73 (5) & $>$ 68$\times$ & $>$ 7.6 (.4) & $>$ 10 \\
-No equivalent points bound & 4 (.3) & 3.8$\times$ & 6.4 (.9) & 14 \\
+CORELS & ~~~1.1 (.1) & --- & 8.9 (.1) & 11 \\
+No priority queue (BFS) & ~~~2.2 (.2) & 2.0$\times$ & 110 (10) & 11 \\
+No support bounds & ~~~1.2 (.1) & 1.1$\times$ & 8.8 (.8) & 11 \\
+No lookahead bound & ~~~1.7 (.2) & 1.6$\times$ & ~7.3 (1.8) & 11-12 \\
+No symmetry-aware map & $>$ 73 (5) & $>$ 68$\times$ & $>$ 7.6 (.4)~~~~ & $>$ 10~~~ \\
+No equivalent points bound & ~~~~~4 (.3) & 3.8$\times$ & 6.4 (.9) & 14 \\
 \hline
 \end{tabular}
 \begin{tabular}{l | c | c | c}
@@ -1038,11 +1038,11 @@ No equivalent points bound & 4 (.3) & 3.8$\times$ & 6.4 (.9) & 14 \\
  & Lower bound & Total queue &  Max queue \\
 Algorithm variant & evaluations ($\times 10^6$) & insertions ($\times 10^5$) &~ size ($\times 10^5$) \\
 \hline
-CORELS & 7 (1) & 2.0 (.2) & 1.3 (.1) \\
+CORELS & ~7 (1) & 2.0 (.2) & 1.3 (.1) \\
 No priority queue (BFS) & 14 (1) & 4.1 (.4) & 1.4 (.1) \\
-No support bounds & 8 (1) & 2.1 (.2) & 1.3 (.1) \\
+No support bounds & ~8 (1) & 2.1 (.2) & 1.3 (.1) \\
 No lookahead bound & 11 (1) & 3.2 (.3) & 2.1 (.2) \\
-No symmetry-aware map & $>$ 390 (40) & $>$ 1000 (0) & $>$ 900 (10) \\
+No symmetry-aware map & $>$ 390 (40)~~~~ & $>$ 1000 (0)~~~~~~ & $>$ 900 (10)~~~ \\
 No equivalent points bound & 33 (2) & 9.4 (.7) & 6.0 (.4) \\
 \end{tabular}
 %\vspace{4mm}
