Add Cynthia's sentence about COMPAS to abstract

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -11,4 +11,8 @@ and a massive reduction of memory consumption.
 We demonstrate that our approach produces optimal rule lists on practical
 problems in seconds.
 %
+Our results indicate that it is possible to construct optimal sparse rule lists that are
+approximately as accurate as the COMPAS proprietary risk prediction tool on data from
+Broward County, Florida.
+%
 This framework is a novel alternative to CART and other decision tree methods.
