Margo word tweak

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -1,7 +1,7 @@
 We present the design and implementation of a custom discrete optimization
 technique for building rule lists over a categorical feature space.
 %
-Our algorithm provides rule lists with optimal training performance,
+Our algorithm produces rule lists with optimal training performance,
 according to the regularized empirical risk, with a certificate of optimality.
 %
 By leveraging algorithmic bounds, efficient data structures,
