Running title must be <=50 characters

--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -17,7 +17,7 @@
 \jmlrheading{xx}{20xx}{1-41}{4/17}{xx/xx}{angelinoxx}{Elaine Angelino, Nicholas Larus-Stone, Daniel Alabi, Margo Seltzer, and Cynthia Rudin}
 
 % Short headings should be running head and authors last names
-\ShortHeadings{Learning Certifiably Optimal Rule Lists for Categorical Data}{Angelino, Larus-Stone, Alabi, Seltzer, and Rudin}
+\ShortHeadings{Learning Certifiably Optimal Rule Lists}{Angelino, Larus-Stone, Alabi, Seltzer, and Rudin}
 \firstpageno{1}
 
 \begin{document}
