--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -51,7 +51,7 @@
 \end{abstract}
 
 \begin{keywords}
-    Rule lists, Decision trees, Optimization, Interpretable models
+    Rule Lists, Decision Trees, Optimization, Interpretable Models, Criminal Justice Applications
 \end{keywords}
 
 \input{sections/introduction}
