Cynthia's edits: add interpretable to intro

--- a/paper/sections/abstract.tex
+++ b/paper/sections/abstract.tex
@@ -13,6 +13,6 @@ problems in seconds.
 %
 Our results indicate that it is possible to construct optimal sparse rule lists that are
 approximately as accurate as the COMPAS proprietary risk prediction tool on data from
-Broward County, Florida.
+Broward County, Florida, but that are completely interpretable.
 %
-This framework is a novel alternative to CART and other decision tree methods.
+This framework is a novel alternative to CART and other decision tree methods for interpretable modeling.
