Black box no hyphen

--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -41,7 +41,7 @@ Optimality is important, because there are societal implications for a lack of o
 Consider the ProPublica article on the Correctional Offender Management Profiling for Alternative Sanctions
 (COMPAS) recidivism prediction tool~\citep{LarsonMaKiAn16}.
 %
-It highlights a case where a black-box, proprietary predictive model is being used for recidivism prediction.
+It highlights a case where a black box, proprietary predictive model is being used for recidivism prediction.
 %
 The authors hypothesize that the COMPAS scores are racially biased,
 but since the model is not transparent, no one (outside of the creators of COMPAS)
