--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -105,6 +105,9 @@ We develop specialized tools from the fields of discrete optimization and artifi
 Specifically, we introduce a specialized branch-and bound algorithm, called
 Certifiably Optimal RulE ListS (CORELS), that provides the optimal solution
 according to the training objective, along with a certificate of optimality.
+%
+The certificate of optimality means that we can investigate how close other models
+(\eg models provided by greedy algorithms) are to optimal.
 
 \begin{arxiv}
 Within its branch-and-bound procedure, CORELS maintains a lower bound on the
