--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -102,7 +102,7 @@ for the ProPublica dataset, found by CORELS.
 
 We develop specialized tools from the fields of discrete optimization and artificial intelligence.
 %
-Specifically, we introduce a specialized branch-and bound algorithm, called
+Specifically, we introduce a special branch-and bound algorithm, called
 Certifiably Optimal RulE ListS (CORELS), that provides the optimal solution
 according to the training objective, along with a certificate of optimality.
 %
