--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -122,8 +122,7 @@ the search space of potential rule lists.
 The algorithm continues to consider incomplete and complete rule lists until it has either
 examined or eliminated every rule list from consideration.
 %
-Thus, CORELS terminates with the optimal rule list %, the close-to-optimal rule lists,
-and a certificate of optimality.
+Thus, CORELS terminates with the optimal rule list and a certificate of optimality.
 \end{arxiv}
 
 The efficiency of CORELS depends on how much of the search space our bounds
@@ -174,7 +173,6 @@ and evaluation of rule lists.
 
 \begin{arxiv}
 We evaluated CORELS on a number of publicly available datasets.
-%and have made code for our algorithm and experiments publicly available.
 %
 Our metric of success was 10-fold cross-validated prediction accuracy on a subset of the data.
 %
