My dad always manages to find a typo :-)

--- a/paper/sections/appendix.tex
+++ b/paper/sections/appendix.tex
@@ -98,7 +98,7 @@ circumstances & associating with criminals, changed direction, & \\
 & sights and sounds of criminal activity, & \\
 & witness report, ongoing investigation & \\
 \hline
-city & Queens,  Manhattan, Brooklyn, Staten, Bronx & 5 \\
+city & Queens,  Manhattan, Brooklyn, Staten Island, Bronx & 5 \\
 \hline
 location & housing authority, transit authority, & 3 \\
 & neither housing nor transit authority & \\
